<resources>

    <!--    App name-->
    <string name="app_name">Stylist IQ</string>


    <!--    Onbording content 1-->
    <string name="slider_layout_header1">Discover Your Style with Stylist IQ</string>
    <string name="slider_layout_content1">Discover your unique style with our AI- powered recommendations.</string>
    <string name="slider_layout_btn_text1">Next up!</string>


    <!--    Onbording content 2-->
    <string name="slider_layout_header2">Perfect Outfits, Every Day</string>
    <string name="slider_layout_content2">Say goodbye to wardrobe dilemmas. StylistIQ creates perfect outfits for every occasion.</string>
    <string name="slider_layout_btn_text2">Get started!</string>


    <!--    Welcome screen strings-->
    <string name="welcome_screen_heading">Your style journey begins here</string>
    <string name="welcome_screen_subTxt">We can\'t wait to help you look your best. Let\'s dive into fashion with Stylist IQ.</string>

    <string name="login">Log In</string>
    <string name="or">OR</string>
    <string name="login_google">Log In using Google</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up"><u>Sign up</u></string>


    <!--    Log in strings-->
    <string name="asterisk">*</string>
    <string name="phone">Phone number</string>
    <string name="pass">Password</string>
    <string name="pass_hint">Your password</string>
    <string name="rem_me">Remember me</string>
    <string name="forgot_pass"><u>Forgot password?</u></string>


    <!--    Sign up strings-->
    <string name="phone_hint">Your phone number</string>
    <string name="signup">Sign Up</string>
    <string name="otp">OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="get_otp">Get OTP</string>
    <string name="have_acc">Already have an account?</string>
    <string name="log_in"><u>Log in</u></string>
    <string name="not_rec_otp">Didn\'t received OTP?</string>
    <string name="one">1</string>
    <string name="slash">/</string>
    <string name="two">2</string>
    <string name="timer">00:40 sec</string>
    <string name="next">Next</string>
    <string name="verify">Verify OTP</string>

    <string name="name">Full name</string>
    <string name="name_hint">Your name</string>
    <string name="email">Email id</string>
    <string name="email_hint">Your email id</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>


    <!--    Google sgn in string-->
    <!--    <string name="default_web_client_id"></string>-->

    <!--    home dashboard string values-->
    <string name="weather_degree">37 °C</string>
    <string name="swipe_down">(Swipe down to view outfits)</string>
    <string name="hello_blank_fragment">blank frag,ent here</string>
    <string name="weather">Weather condition</string>
    <string name="weather_outfit"><u>Weather Outfits</u></string>
    <string name="your_closet">Personal wardrobe</string>
    <string name="items12">12 item(s)</string>
    <string name="item_col_analysis">Item(s) Color Analysis</string>
    <string name="stats">Statistics</string>
    <string name="see_all"><u>See all</u></string>
    <string name="outfit_suggest">Outfit suggestions</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>

    <!--    Closet string values-->
    <string name="add">Add item</string>
    <string name="select">Select item(s)</string>
    <string name="category">Category</string>
    <string name="color">Color</string>
    <string name="pattern">Pattern</string>
    <string name="added">Added on</string>
    <string name="label">Labels</string>
    <string name="fabric">Fabric</string>

    <!--    Weather fragment strings-->
    <string name="humid">Humidity:</string>
    <string name="cloud">Cloudy:</string>
    <string name="weather_suggest">Weather based suggestions</string>

    <!--    Schedule fragment strings-->
    <string name="schedule">Schedule outfit</string>
    <string name="date">Date:</string>
    <string name="upperwear">Upperwear:</string>
    <string name="bottomwear">Bottomwear:</string>
    <string name="select_img">Select</string>
    <string name="schedule_cloth">Schedule Cloth</string>
    <string name="top_cloth_suggestion">Top Cloth Suggestion</string>

</resources>