<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup.SignUp_2"
    android:background="@color/black">

    <!--    Bg Doodle-->
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.75"
        android:background="@drawable/bg_doodle"
        android:backgroundTintMode="screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--        For back btn-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#BF0B0A0B">

            <!--        Back btn-->
            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/back_icon"
                app:backgroundTint="#00000000" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true"
                android:gravity="start"
                android:layout_centerVertical="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam_pro_medium"
                    android:text="@string/two"
                    android:fontFeatureSettings="pnum, lnum"
                    android:gravity="center_vertical"
                    android:textColor="@color/yellow"
                    android:textSize="28sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam_pro_medium"
                    android:text="@string/slash"
                    android:fontFeatureSettings="pnum, lnum"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam_pro_medium"
                    android:text="@string/two"
                    android:fontFeatureSettings="pnum, lnum"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"/>

            </LinearLayout>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--            LL for texts-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/be_vietnam_thin"
                        android:text="@string/asterisk"
                        android:textColor="@color/yellow"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/be_vietnam_pro_medium"
                        android:lineSpacingExtra="2sp"
                        android:text="@string/signup"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp" />

                </LinearLayout>

                <!--            Text fields-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/raleway_semibold"
                            android:text="@string/name"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:background="@drawable/edit_txt_bg"
                            android:fontFamily="@font/raleway_medium"
                            android:fontFeatureSettings="pnum, lnum"
                            android:gravity="center_vertical"
                            android:hint="@string/name_hint"
                            android:inputType="number"
                            android:padding="12dp"
                            android:textColor="@color/white"
                            android:textColorHint="#80FFFFFF"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/raleway_semibold"
                            android:text="@string/email"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:background="@drawable/edit_txt_bg"
                            android:fontFamily="@font/raleway_medium"
                            android:fontFeatureSettings="pnum, lnum"
                            android:gravity="center_vertical"
                            android:hint="@string/email_hint"
                            android:inputType="number"
                            android:padding="12dp"
                            android:textColor="@color/white"
                            android:textColorHint="#80FFFFFF"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/raleway_semibold"
                            android:text="@string/pass"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:background="@drawable/edit_txt_bg"
                            android:fontFamily="@font/raleway_medium"
                            android:fontFeatureSettings="pnum, lnum"
                            android:gravity="center_vertical"
                            android:hint="@string/pass_hint"
                            android:inputType="textPassword"
                            android:padding="12dp"
                            android:textColor="@color/white"
                            android:textColorHint="#80FFFFFF"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/raleway_semibold"
                            android:text="@string/gender"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginTop="4dp">

                            <RadioButton
                                android:id="@+id/male_rb"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/male"
                                app:drawableTint="#0000"
                                android:button="@android:color/transparent"
                                android:fontFamily="@font/raleway_medium"
                                android:fontFeatureSettings="pnum, lnum"
                                android:gravity="center_vertical"
                                android:padding="12dp"
                                android:textColor="@drawable/gender_txt_selector"
                                android:drawableEnd="@drawable/selected_icon"
                                android:background="@drawable/gender_bg_selector"
                                android:textSize="14sp" />

                            <RadioButton
                                android:id="@+id/female_rb"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/female"
                                app:drawableTint="#0000"
                                android:drawableEnd="@drawable/selected_icon"
                                android:button="@android:color/transparent"
                                android:layout_marginTop="4dp"
                                android:background="@drawable/gender_bg_selector"
                                android:fontFamily="@font/raleway_medium"
                                android:fontFeatureSettings="pnum, lnum"
                                android:gravity="center_vertical"
                                android:padding="12dp"
                                android:textColor="@drawable/gender_txt_selector"
                                android:textSize="14sp" />

                        </RadioGroup>

                    </LinearLayout>

                </LinearLayout>

                <!--            LL for btns-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="40dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/loginBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/white"
                        android:drawableEnd="@drawable/arrow_with_bg_icon"
                        android:fontFamily="@font/be_vietnam_pro_medium"
                        android:fontFeatureSettings="pnum, lnum"
                        android:gravity="center"
                        android:letterSpacing=".02"
                        android:padding="4dp"
                        android:paddingStart="36dp"
                        android:paddingEnd="4dp"
                        android:text="@string/get_otp"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:cornerRadius="100dp" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>