<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Signup.SignUp_1">

    <!--    Bg Doodle-->
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.75"
        android:background="@drawable/bg_doodle"
        android:backgroundTintMode="screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--        For back btn-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#BF0B0A0B">

            <!--        Back btn-->
            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/back_icon"
                app:backgroundTint="#00000000" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true"
                android:gravity="start"
                android:layout_centerVertical="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam_pro_medium"
                    android:text="@string/one"
                    android:fontFeatureSettings="pnum, lnum"
                    android:gravity="center_vertical"
                    android:textColor="@color/yellow"
                    android:textSize="28sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam_pro_medium"
                    android:text="@string/slash"
                    android:fontFeatureSettings="pnum, lnum"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam_pro_medium"
                    android:text="@string/two"
                    android:fontFeatureSettings="pnum, lnum"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"/>

            </LinearLayout>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--            LL for texts-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/be_vietnam_thin"
                        android:text="@string/asterisk"
                        android:textColor="@color/yellow"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/be_vietnam_pro_medium"
                        android:lineSpacingExtra="2sp"
                        android:text="@string/signup"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp" />

                </LinearLayout>

                <!--            Text fields-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:orientation="vertical">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/countryCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/edit_txt_bg"
                        android:padding="4dp"
                        android:textAlignment="textStart"
                        app:ccp_contentColor="@color/white"
                        app:ccp_countryPreference="in"
                        app:ccp_textGravity="LEFT"
                        app:ccp_textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/raleway_semibold"
                            android:text="@string/phone"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:background="@drawable/edit_txt_bg"
                            android:fontFamily="@font/raleway_medium"
                            android:fontFeatureSettings="pnum, lnum"
                            android:gravity="center_vertical"
                            android:hint="+91"
                            android:inputType="number"
                            android:padding="12dp"
                            android:textColor="@color/white"
                            android:textColorHint="#80FFFFFF"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/raleway_semibold"
                            android:text="@string/otp"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:background="@drawable/edit_txt_bg"
                            android:fontFamily="@font/raleway_medium"
                            android:fontFeatureSettings="pnum, lnum"
                            android:gravity="center_vertical"
                            android:hint="@string/enter_otp"
                            android:inputType="textPassword"
                            android:padding="12dp"
                            android:textColor="@color/white"
                            android:textColorHint="#80FFFFFF"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

                <!--            LL for btns-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="40dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/get_otp_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/white"
                        android:drawableEnd="@drawable/arrow_with_bg_icon"
                        android:fontFamily="@font/be_vietnam_pro_medium"
                        android:fontFeatureSettings="pnum, lnum"
                        android:gravity="center"
                        android:letterSpacing=".02"
                        android:padding="4dp"
                        android:paddingStart="36dp"
                        android:paddingEnd="4dp"
                        android:text="@string/get_otp"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:cornerRadius="100dp" />

                    <!--                No acc LL-->
                    <LinearLayout
                        android:id="@+id/otp_timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:gravity="bottom"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:fontFamily="@font/raleway_medium"
                            android:text="@string/not_rec_otp"
                            android:textColor="@color/subTxtColor"
                            android:textSize="15sp" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/resend_otp_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#0000"
                            android:clickable="true"
                            android:focusable="true"
                            android:fontFamily="@font/raleway_medium"
                            android:fontFeatureSettings="pnum, lnum"
                            android:gravity="center"
                            android:letterSpacing=".02"
                            android:padding="8dp"
                            android:text="00:40 sec"
                            android:textColor="@color/yellow"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

                <!--                No acc LL-->
                <LinearLayout
                    android:id="@+id/no_acc_LL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:gravity="bottom"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/raleway_medium"
                        android:text="@string/have_acc"
                        android:textColor="@color/subTxtColor"
                        android:textSize="15sp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/signupBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#0000"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@font/raleway_medium"
                        android:gravity="center"
                        android:letterSpacing=".02"
                        android:padding="8dp"
                        android:text="@string/log_in"
                        android:textColor="@color/yellow"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>